--- a/index.html
+++ b/index.html
@@ -18,7 +18,31 @@
       transform: translate(-50%) translate(-50%);
   </style>
   <META http-equiv="refresh" content="10;https://api.whatsapp.com/send?phone=556596499466&text=Ol%C3%A1%20Edv%C3%A2nia%2C%20estou%20interessado%20(a)%20no%20seu%20servi%C3%A7o%20de%20costura"></META>
+  </style>
+  
 </head>
+  <meta name="facebook-domain-verification" content="zogcmfluezlvfe5h95d7omnubvt07k" />
+</head>
+
+  <!-- Meta Pixel Code -->
+  <script>
+   !function(f,b,e,v,n,t,s)
+   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+   n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+   if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+   n.queue=[];t=b.createElement(e);t.async=!0;
+   t.src=v;s=b.getElementsByTagName(e)[0];
+   s.parentNode.insertBefore(t,s)}(window, document,'script',
+   'https://connect.facebook.net/en_US/fbevents.js');
+   fbq('init', '484228570119533');
+   fbq('track', 'PageView');
+   </script>
+   <noscript><img height="1" width="1" style="display:none"
+   src="https://www.facebook.com/tr?id=484228570119533&ev=PageView&noscript=1"
+   /></noscript>
+   <!-- End Meta Pixel Code -->
+
+
 <body>
   <h1>Carregando...</h1>
 </body>
